kubernetes-deployment-files/cryptorec-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cryptorec
  namespace: cryptorec
  labels:
    app: cryptorec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cryptorec
  template:
    metadata:
      labels:
        app: cryptorec
    spec:
      containers:
        - name: cryptorec
          image: pavloskkr/cryptorec:latest
          volumeMounts:
          - name: csv-volume
            mountPath: /app/data
          ports:
            - containerPort: 8091
      volumes:
        - name: csv-volume
          hostPath:
            path: "/home/randvu-admin/cryptorec/csv-files"
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: cryptorec
  namespace: cryptorec
spec:
  selector:
    app: cryptorec
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8091
